--- a/hr_recruitment/report/hr_recruitment_report_view.xml
+++ b/hr_recruitment/report/hr_recruitment_report_view.xml
@@ -6,7 +6,7 @@
         <field name="model">hr.recruitment.report</field>
         <field name="arch" type="xml">
             <tree string="Recruitment Analysis" create="false">
-                <field name="date" invisible="1"/>
+                <field name="date_create" invisible="1"/>
                 <field name="user_id" invisible="1"/>
                 <field name="job_id"/>
                 <field name="stage_id" invisible="1" />
@@ -17,6 +17,7 @@
                 <field name="year" invisible="1"/>
                 <field name="day" invisible="1"/>
                 <field name="month" invisible="1"/>
+                <field name="date_last_stage_update" invisible="1"/>
                 <field name="nbr" sum="# of Applications"/>
                 <field name="available" sum="Available"/>
                 <field name="salary_exp" sum="Expected Salary"/>
@@ -57,20 +58,21 @@
                     <field name="priority"/>
                     <field name="stage_id"/>
                     <field name="company_id" groups="base.group_multi_company"/>
-                    <field name="date" string="Creation Date"/>
+                    <field name="date_create"/>
                     <field name="date_closed"/>
                 </group>
                 <group expand="1" string="Group By ...">
-                   <filter string="Responsible" name='User' icon="terp-personal" domain="[]" context="{'group_by':'user_id'}"/>
-                   <filter string="Company" icon="terp-go-home" domain="[]" context="{'group_by':'company_id'}" groups="base.group_multi_company"/>
-                   <filter string="Partner" icon="terp-partner" domain="[]" context="{'group_by':'partner_id'}" />
-                   <filter string="Jobs" name="job" icon="terp-gtk-select-all" domain="[]" context="{'group_by':'job_id'}"/>
-                   <filter string="Department" name="department" icon="terp-personal+" domain="[]" context="{'group_by':'department_id'}"/>
-                   <filter string="Degree" name="degree" icon="terp-gtk-select-all" domain="[]" context="{'group_by':'type_id'}"/>
-                   <filter string="Stage" icon="terp-stage" domain="[]" context="{'group_by':'stage_id'}" />
-                   <filter string="Day" name = "day" icon="terp-go-today" domain="[]" context="{'group_by':'day'}" help="Creation Date"/>
-                   <filter string="Month" icon="terp-go-month" domain="[]" context="{'group_by':'month'}" help="Creation Date"/>
-                   <filter string="Year" icon="terp-go-year" domain="[]" context="{'group_by':'year'}" help="Creation Date"/>
+                   <filter string="Responsible" name='User' context="{'group_by':'user_id'}"/>
+                   <filter string="Company" context="{'group_by':'company_id'}" groups="base.group_multi_company"/>
+                   <filter string="Partner" context="{'group_by':'partner_id'}" />
+                   <filter string="Jobs" name="job" context="{'group_by':'job_id'}"/>
+                   <filter string="Department" name="department" context="{'group_by':'department_id'}"/>
+                   <filter string="Degree" name="degree" context="{'group_by':'type_id'}"/>
+                   <filter string="Stage" context="{'group_by':'stage_id'}" />
+                   <filter string="Last Stage Update" context="{'group_by':'date_last_stage_update'}" />
+                   <filter string="Day" name="day" context="{'group_by':'day'}" help="Creation Date"/>
+                   <filter string="Month" context="{'group_by':'month'}" help="Creation Date"/>
+                   <filter string="Year" context="{'group_by':'year'}" help="Creation Date"/>
                 </group>
             </search>
         </field>
