--- a/project_issue/report/project_issue_report_view.xml
+++ b/project_issue/report/project_issue_report_view.xml
@@ -20,6 +20,7 @@
                     <field name="partner_id" invisible="1"/>
                     <field name="task_id" invisible="1"/>
                     <field name="date_closed" invisible="1"/>
+                    <field name="date_last_stage_update" invisible="1"/>
                     <field name="day" invisible="1"/>
                     <field name="nbr" string="#Project Issues" sum="#Number of Project Issues"/>
                     <field name="delay_open" avg="Avg Opening Delay"/>
@@ -70,6 +71,7 @@
                         <filter string="Day" icon="terp-go-today" domain="[]" context="{'group_by':'day'}" help="Creation Date"/>
                         <filter string="Month" icon="terp-go-month" domain="[]" context="{'group_by':'month'}" help="Creation Date"/>
                         <filter string="Year" icon="terp-go-year" domain="[]" context="{'group_by':'name'}" help="Creation Date"/>
+                        <filter string="Last Stage Update" context="{'group_by':'date_last_stage_update'}"/>
                    </group>
                </search>
             </field>
