--- a/crm/report/crm_lead_report_view.xml
+++ b/crm/report/crm_lead_report_view.xml
@@ -13,6 +13,7 @@
                 <field name="creation_month" invisible="1"/>
                 <field name="creation_day" invisible="1"/>
                 <field name="deadline_month" invisible="1"/>
+                <field name="date_last_stage_update" invisible="1"/>
                 <field name="stage_id"  invisible="1"/>
                 <field name="type_id" invisible="1"/>
                 <field name="channel_id" invisible="1"/>
@@ -121,6 +122,7 @@
                         <separator orientation="vertical" />
                         <filter string="Exp. Closing"  icon="terp-go-month"
                             domain="[]" context="{'group_by':'deadline_month'}"/>
+                        <filter string="Last Stage Update" context="{'group_by':'date_last_stage_update'}" />
                     </group>
                 </search>
             </field>
@@ -152,6 +154,7 @@
                 <field name="planned_revenue" sum="Planned Revenues"/>
                 <field name="delay_open" sum='Delay to Assign'/>
                 <field name="delay_close" sum='Delay to close'/>
+                <field name="date_last_stage_update"/>
                 <field name="delay_expected"/>
                 <field name="probability" widget="progressbar"/>
                 <field name="probable_revenue"/>
