--- a/mail/wizard/mail_compose_message_view.xml
+++ b/mail/wizard/mail_compose_message_view.xml
@@ -12,6 +12,7 @@
                         <field name="model" invisible="1"/>
                         <field name="res_id" invisible="1"/>
                         <field name="parent_id" invisible="1"/>
+                        <field name="mail_server_id" invisible="1"/>
                         <!-- visible wizard -->
                         <field name="email_from"
                             attrs="{'invisible':[('composition_mode', '!=', 'mass_mail')]}"/>
