[CLEAN] Cleaning befor merging No need to use an image for edition -> use webtypo font instead Small code cleaning in js / python

--- a/mail/static/src/css/mail.css
+++ b/mail/static/src/css/mail.css
@@ -632,14 +632,10 @@
 }
 .openerp .oe_followers .oe_partner {
     height: 32px;
-    margin-right: 8px;
+    margin-right: 24px;
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
-    margin-right: 10px;
-}
-.openerp .oe_followers .oe_partner_name {
-    margin-right: 26px;
 }
 .openerp .oe_followers .oe_partner img{
     width: 32px;
@@ -656,11 +652,9 @@
     cursor: pointer;
     position: absolute;
     right: 12px;
-    margin-top: 6px;
-    width: 10px !important;
-    height: 12px !important;
+    line-height: 20px;
 }
-.openerp .oe_followers .oe_partner img.hidden{
+.openerp .oe_followers .oe_partner .oe_hidden{
     display: none;
 }
 .openerp.ui-dialog .ui-dialog-titlebar .ui-dialog-title{
