[IMP] Fixed issue of traceback when we enter non integer number,improved css and help.

--- a/crm/static/src/css/crm.css
+++ b/crm/static/src/css/crm.css
@@ -29,6 +29,7 @@
     margin: 0 !important;
     position: relative;
     display: inline-block;
+    float: left;
 }
 .openerp .oe_kanban_view .oe_kanban_crm_salesteams .oe_items_list a:hover {
     text-decoration: underline !important;
