--- a/sale/report/sale_report_view.xml
+++ b/sale/report/sale_report_view.xml
@@ -47,8 +47,8 @@
             <search string="Sales Analysis">
                 <field name="date"/>
                 <field name="date_confirm"/>
-                <filter icon="terp-document-new" string="Quotations" domain="[('state','=','draft')]"/>
-                <filter icon="terp-check" string="Sales" domain="[('state','not in',('draft','done','cancel'))]"/>
+                <filter icon="terp-document-new" name="Quotations" domain="[('state','=','draft')]"/>
+                <filter icon="terp-check" name="Sales" domain="[('state','not in',('draft','done','cancel'))]"/>
                 <separator/>
                 <filter icon="terp-accessories-archiver" string="Picked" domain="[('shipped','=',True)]"/>
                 <separator/>
