--- a/mail/wizard/mail_compose_message_view.xml
+++ b/mail/wizard/mail_compose_message_view.xml
@@ -14,8 +14,8 @@
                         <field name="parent_id" invisible="1"/>
                         <field name="mail_server_id" invisible="1"/>
                         <field name="use_active_domain" invisible="1"/>
+                        <field name="active_domain" invisible="1"/>
                         <!-- visible wizard -->
-                        <field name="active_domain" attrs="{'invisible': [('use_active_domain', '=', False)]}"/>
                         <field name="email_from"
                             attrs="{'invisible':[('composition_mode', '!=', 'mass_mail')]}"/>
                         <field name="subject" placeholder="Subject..." required="True"/>
