[IMP] Added company_id and currency_symbole field and improved related code to show tooltip as per requrement and 5 sec late,improved css to show proper cursore, improved actions & domains for proper results.

--- a/crm/static/src/css/crm.css
+++ b/crm/static/src/css/crm.css
@@ -1,5 +1,6 @@
 .openerp .oe_kanban_view .oe_kanban_crm_salesteams {
     width: 345px;
+    cursor: default;
 }
 .openerp .oe_kanban_view .oe_kanban_crm_salesteams .oe_avatars {
     text-align: right;
@@ -61,5 +62,5 @@
 
 .openerp .oe_kanban_view .oe_sparkline_bar {
     height: 20px;
-    width: 36px;
+    width: 36px !important;
 }
