--- a/sale_crm/report/sale_report_view.xml
+++ b/sale_crm/report/sale_report_view.xml
@@ -17,7 +17,7 @@
             <field name="model">sale.report</field>
             <field name="inherit_id" ref="sale.view_order_product_search"/>
             <field name="arch" type="xml">
-                <filter string="My Sales" position="after">
+                <filter name="Sales" position="after">
                     <separator/>
                     <field name="section_id" groups="base.group_multi_salesteams"/>
                 </filter>
