--- a/sale_crm/report/sale_report_view.xml
+++ b/sale_crm/report/sale_report_view.xml
@@ -19,7 +19,7 @@
             <field name="arch" type="xml">
                 <filter name="Sales" position="after">
                     <separator/>
-                    <field name="section_id" groups="base.group_multi_salesteams"/>
+                    <filter string="Sales Team" context="{'group_by':'section_id'}"/>
                 </filter>
             </field>
         </record>
